Fix skip content button visibility

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -12,7 +12,7 @@
 		justify-content: space-between;
 		align-items: center;
 		width: 100%;
-		z-index: 2;
+		z-index: 10;
 		padding-left: 1.5em;
 		padding-right: 1.5em;
 		transition: height .2s linear, transform .2s ease-out, background .2s ease-out, box-shadow .2s ease-out;
@@ -79,6 +79,7 @@
 		top: 0;
 		width: 100%;
 		text-align: center;
+		z-index: 20;
 
 		a {
 			position: absolute;
